# mcxn-iot

./: .gitignore  Kconfig  readme.md  west.yml
applications/ezh_command_processor/: CMakeLists.txt  default.dwf3work  ezh program backup.cpp  logic.dwf3work  lpc55s69.jdebug  mcxn.jdebug  prj.conf
applications/ezh_command_processor/boards/: frdm_mcxn947_mcxn947_cpu0.overlay  gibbon_d_lpc55s69_cpu0.overlay  lpcxpresso55s69_lpc55s69_cpu0.overlay
applications/ezh_command_processor/src/: bunny_build__config.h  ext_ram.cpp  ext_ram.h  ezh_app.c  ezh_app.h  main.c  main.cpp  t2.c  t2.h
applications/faro/pwm/: CMakeLists.txt  README.md  west.yml
applications/faro/pwm/app/: CMakeLists.txt  prj.conf  sample.yaml  sysbuild.cmake
applications/faro/pwm/app/include/: pwm_control.h
applications/faro/pwm/app/remote/: CMakeLists.txt
applications/faro/pwm/app/src/: main.c  pwm_control.c
applications/faro/pwm/cmake/: CMakeLists.txt
applications/faro/pwm/drivers/ethernet/: CMakeLists.txt  Kconfig
applications/faro/pwm/drivers/tracker_sync/: tracker_sync_sim.c
applications/faro/pwm/include/drivers/: board_id.h  tracker_sync.h
applications/faro/pwm/proto/: version.proto
applications/little_fs/: CMakeLists.txt  prj.conf
applications/little_fs/ebug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
applications/little_fs/ebug/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.sysbuild.modules
applications/little_fs/ebug/Kconfig/arch/: Kconfig
applications/little_fs/ebug/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
applications/little_fs/ebug/modules/acpica/: cmake_install.cmake
applications/little_fs/ebug/modules/adi/: cmake_install.cmake
applications/little_fs/ebug/modules/altera/: cmake_install.cmake
applications/little_fs/ebug/modules/atmel/: cmake_install.cmake
applications/little_fs/ebug/modules/cmsis/: cmake_install.cmake
applications/little_fs/ebug/modules/cmsis-dsp/: cmake_install.cmake
applications/little_fs/ebug/modules/cmsis-nn/: cmake_install.cmake
applications/little_fs/ebug/modules/fatfs/: cmake_install.cmake
applications/little_fs/ebug/modules/golioth-firmware-sdk/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_ambiq/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_espressif/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_ethos_u/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_gigadevice/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_infineon/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_intel/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_nordic/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_nxp/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_renesas/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_rpi_pico/: cmake_install.cmake
applications/little_fs/ebug/modules/hal_silabs/: cmake_install.cmake
applications/little_fs/ebug/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.pre  zephyr.elf  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
applications/little_fs/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/board_id/: CMakeLists.txt  Kconfig  board_id_phoenix.c  board_id_sim.c
drivers/ethernet/phy/: phy_microchip_lan8830.c
drivers/motor_pwm/: CMakeLists.txt  Kconfig  module.yml  motor_pwm.c
drivers/tracker_sync/: CMakeLists.txt  Kconfig  tracker_sync_phoenix.c
(+240 files in other folders)
